--- a/fed.css
+++ b/fed.css
@@ -96,9 +96,13 @@ footer {
     border-top: 1px solid #999;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: 0 20px;
     font-size: 12px;
+    gap: 10px;
+}
+
+footer span {
+    flex: 1;
 }
 
 footer a {
